@@ -53,6 +53,7 @@ version ? (????-??-??):
   - added notifications about availability of LMS's newer versions (alec)
   - added possibility to remove selected documents on documents list (zet/alec)
   - many Internet Messengers (GG, Skype, Yahoo) in customer's data (zet/alec)
+  - fxed customers searching by address in quick search module (alec)
 
 version 1.9.6 Belos (2007-02-16):
 
